--- a/OtoServis/OtoServis.csproj
+++ b/OtoServis/OtoServis.csproj
@@ -53,6 +53,9 @@
     <None Update="Rapor\ReportHerBirPersonelIcinYapilanToplamSatisTutariVeSatisAdedi.rdlc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Rapor\ReportHerBirRoldekiPersonelSayisi.rdlc">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Rapor\ReportTamirEdilenAraclar.rdlc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
