--- a/OtoServis/OtoServis.csproj
+++ b/OtoServis/OtoServis.csproj
@@ -68,6 +68,9 @@
     <None Update="Rapor\ReportModelYilinaGoreAracSayisi.rdlc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Rapor\ReportMusterilereGoreToplamHarcamaMiktari.rdlc">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Rapor\ReportTamirEdilenAraclar.rdlc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
