--- a/OtoServis/OtoServis.csproj
+++ b/OtoServis/OtoServis.csproj
@@ -44,6 +44,9 @@
     <None Update="Rapor\ReportEnCokKullanilanParcalarVeAraclardakiKullanimSikligi.rdlc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Rapor\ReportEncokTamirEdilenAraclarListesi.rdlc">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Rapor\ReportHerBirMarkayaAitAracSayisiVeOrtalamaYaslari.rdlc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -81,6 +84,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Rapor\ReportTamirEdilenAraclar.rdlc">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Rapor\ReportTamirIslemiGorenAracBilgileri.rdlc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
